outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval4044602312162095340_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine local regret, global distance, and path coherence with dynamic weights, while introducing a novel "node potential" metric that evaluates each node's contribution to the overall tour efficiency, particularly emphasizing connectivity and directionality in the middle stages of the tour.}
                                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine local regret, global distance, and path coherence with dynamic weights, while introducing a novel "node potential" metric that evaluates each node's contribution to the overall tour efficiency, particularly emphasizing connectivity and directionality in the middle stages of the tour.}
                                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
